<resources>
    <string name="app_name">SESHealthPatient</string>
    <string name="username_txt">Username:</string>
    <string name="fullname_txt">Full Name</string>
    <string name="email_example_com">email@example.com</string>
    <string name="password_txt">Password:</string>
    <string name="log_in_txt">Log In</string>
    <string name="login_activity_title">Log In</string>
    <string name="register_txt">Register</string>
    <string name="register_title">Register</string>
    <string name="register_have_account">Already Have An Account? Login Here!</string>
    <string name="register_full_name">Full Name:</string>
    <string name="register_patient">Patient Registration</string>
    <string name="register_doctor">Doctor Registration</string>
    <string name="register_weight">Weight (kg):</string>
    <string name="register_height">Height (cm):</string>
    <string name="register_gender">Gender:</string>
    <string name="editprofile_editprofile">Edit Profile</string>
    <string name="editprofile_makechanges">Make Changes</string>
    <string name="doctor_information">Doctor Information</string>
    <string name="view_patients">View Patients</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="patient_information">Patient Information</string>
    <string name="create_data_packet">Create Data Packet</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="record_video">Record Video</string>
    <string name="send_local_file">Send Local File</string>
    <string name="facilities_map">Facilities Map</string>
    <string name="patient_chat_message">Message Doctor</string>
    <string name="doctor_chat_message">Message Patient</string>
    <string name="sign_out">Sign Out</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="map_edit_text_hint">Enter location</string>


</resources>
